ChangeLog
=========

Release: 1.3.3
===============================================================================
2022-10-14 Added functionality to the buttons on the logging page.

2022-10-13 Fixed the setup of the edit line of surface files. Fixed the dialog
           boxes used to signal the download state.

2022-10-12 Added FTP support for downloading surface files from a NetLinx.

2022-10-08 Added content fill for lists. Sound settings are fully working now.

2022-10-01 Refactored the classes TPage and TSubpage: Added an interface class
           to not have duplicated methods.

2022-09-24 Added setup functions for sound settings.

2022-09-18 Added setup functions for SIP settings.

2022-09-17 Added setup functions for view settings.

2022-09-11 Added setup functions for NetLinx settings.

2022-09-10 Added setup functions for log settings.

2022-09-04 Added internal list handling for system pages.

2022-09-03 Added TP4 system pages to replace the setup dialog box on Android.

2022-08-28 Fixed Qt 5.15.x compiling for Android (Qt 6.3 does not support
           Android).
           Fixing cameleon images if size of mask and bitmap differ.
           Removing preprocessor directives used as a work around for the RGB
           bug in previous Skia versions.

2022-07-18 Changed source for Qt6.3 library (Qt5 is still supported).

2022-07-14 Added a new progress dialog to show the progress of a file download.

2022-07-13 Upgrade for latest Skia library

2022-07-01 Added a mechanism to redraw a button internally only if it was
           changed.

2022-06-01 Fixed the colors of the chameleon images.

Release: 1.3.2
===============================================================================
2022-05-31 Changed the commands arrived from a Netlinx to go into a command
           queue which is now handled in a thread of it's own.
           Fixed the text parts of the ^BMF command to replace a "|" sign with
           a LF (0x0a).
